# vk-renderer

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
cmake/: EmbedFile.cmake  VulkanShaders.cmake
resources/: resources-dependency-exclude  resources-dependency.props
resources/shaders/: compile-shaders.props  standard.fs.glsl
src/vk-renderer/: vk-renderer-utils.hpp  vk-renderer.hpp
src/vk-renderer-test/: vk-renderer-test.cpp
src/vk_renderer/: vk_renderer.hpp  vk_renderer_common.hpp  vk_renderer_utils.hpp
src/vk_renderer_test/: vk_renderer_test.cpp
vs2017/: vk-renderer.sln  vkTest.sln
vs2017/build-props/: build-defaults.props
vs2017/vk-renderer/: vk-renderer.vcxproj
vs2017/vk-renderer-test/: vk-renderer-test.vcxproj
vs2017/vk_renderer/: vk_renderer.vcxproj
vs2017/vk_renderer_test/: vk_renderer_test.vcxproj  vk_renderer_test.vcxproj.filters
vscode/: vulkan-renderer.code-workspace
xcode/vk-renderer-test/vk-renderer-test.xcodeproj/: project.pbxproj
xcode/vk-renderer-test/vk-renderer-test.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/vk-renderer-test/vk-renderer-test.xcodeproj/xcshareddata/xcschemes/: vk-renderer-test.xcscheme
xcode/vk-renderer.xcworkspace/: contents.xcworkspacedata
xcode/vk-renderer/vk-renderer.xcodeproj/: project.pbxproj
xcode/vk-renderer/vk-renderer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/vk-renderer/vk-renderer.xcodeproj/vk-renderer.xcworkspace/: contents.xcworkspacedata
xcode/vk-renderer/vk-renderer.xcodeproj/xcshareddata/xcschemes/: vk-renderer.xcscheme
xcode/vkTest.xcodeproj/: project.pbxproj
xcode/vkTest.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
